Finished configuration, authentication, and backend sql classes

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
 			<name>jcenter-bintray</name>
 			<url>https://jcenter.bintray.com</url>
 		</repository>
+		
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
@@ -24,6 +29,18 @@
 					<artifactId>opus-java</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.github.WesternPine</groupId> -->
+<!-- 			<artifactId>Marble</artifactId> -->
+<!-- 			<version>master-SNAPSHOT</version> -->
+<!-- 		</dependency> -->
+		
+		<dependency>
+			<groupId>proj.api</groupId>
+			<artifactId>Marble</artifactId>
+			<version>8</version>
 		</dependency>
 
 		<dependency>
