--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,19 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>dev.westernpine</groupId>
-  <artifactId>GateKeeper</artifactId>
-  <version>1</version>
-  <name>GateKeeper</name>
-  
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>dev.westernpine</groupId>
+	<artifactId>GateKeeper</artifactId>
+	<version>1</version>
+	<name>GateKeeper</name>
+
 	<repositories>
 		<repository>
 			<id>jcenter</id>
 			<name>jcenter-bintray</name>
 			<url>https://jcenter.bintray.com</url>
 		</repository>
-		
+
 		<repository>
 			<id>jitpack.io</id>
 			<url>https://jitpack.io</url>
@@ -30,17 +32,17 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.github.WesternPine</groupId> -->
-<!-- 			<artifactId>Marble</artifactId> -->
-<!-- 			<version>master-SNAPSHOT</version> -->
-<!-- 		</dependency> -->
-		
+
+		<!-- <dependency> -->
+		<!-- <groupId>com.github.WesternPine</groupId> -->
+		<!-- <artifactId>Marble</artifactId> -->
+		<!-- <version>master-SNAPSHOT</version> -->
+		<!-- </dependency> -->
+
 		<dependency>
 			<groupId>proj.api</groupId>
 			<artifactId>Marble</artifactId>
-			<version>8</version>
+			<version>9</version>
 		</dependency>
 
 		<dependency>
@@ -48,6 +50,13 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.16</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
