[Build 7] Added new functionality and other improvements.
 - Implemented ability to make role reactions add or remove roles.
 - Implemented ability for multiple mentioned roles for both reaction
roles and auto roles.
 - You can now have multiple reaction roles on a single reaction.
 - Updated Marble dependency to use jitpack repo.
 - Cleaned up more messages, such as formatting error message.
 - Fixed some minor bugs involving synchronization.

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>dev.westernpine</groupId>
 	<artifactId>GateKeeper</artifactId>
-	<version>6</version>
+	<version>7</version>
 	<name>GateKeeper</name>
 
 	<repositories>
@@ -14,10 +14,10 @@
 			<url>https://jcenter.bintray.com</url>
 		</repository>
 
-<!-- 		<repository> -->
-<!-- 			<id>jitpack.io</id> -->
-<!-- 			<url>https://jitpack.io</url> -->
-<!-- 		</repository> -->
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
@@ -33,16 +33,10 @@
 			</exclusions>
 		</dependency>
 
-		<!-- <dependency> -->
-		<!-- <groupId>com.github.WesternPine</groupId> -->
-		<!-- <artifactId>Marble</artifactId> -->
-		<!-- <version>master-SNAPSHOT</version> -->
-		<!-- </dependency> -->
-
 		<dependency>
-			<groupId>proj.api</groupId>
+			<groupId>com.github.WesternPine</groupId>
 			<artifactId>Marble</artifactId>
-			<version>10</version>
+			<version>master-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
