[Build 9] Several bug fixes.
- Fixed missing jackson xml dependency

- Fixed bug where it didnt take into account reactions being added to a
message that wasnt in the reaction database.

- Moved off marble dependency.

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>dev.westernpine</groupId>
 	<artifactId>GateKeeper</artifactId>
-	<version>8</version>
+	<version>9</version>
 	<name>GateKeeper</name>
 
 	<repositories>
@@ -13,30 +13,25 @@
 			<name>jcenter-bintray</name>
 			<url>https://jcenter.bintray.com</url>
 		</repository>
-
-		<repository>
-			<id>jitpack.io</id>
-			<url>https://jitpack.io</url>
-		</repository>
 	</repositories>
 
 	<dependencies>
 		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.11.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>net.dv8tion</groupId>
 			<artifactId>JDA</artifactId>
-			<version>4.1.1_126</version>
+			<version>4.2.0_171</version>
 			<exclusions>
 				<exclusion>
 					<groupId>club.minnced</groupId>
 					<artifactId>opus-java</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
-
-		<dependency>
-			<groupId>com.github.WesternPine</groupId>
-			<artifactId>Marble</artifactId>
-			<version>master-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
@@ -49,6 +44,49 @@
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.14</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ninja.leaping.configurate</groupId>
+			<artifactId>configurate-core</artifactId>
+			<version>3.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ninja.leaping.configurate</groupId>
+			<artifactId>configurate-json</artifactId>
+			<version>3.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ninja.leaping.configurate</groupId>
+			<artifactId>configurate-yaml</artifactId>
+			<version>3.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ninja.leaping.configurate</groupId>
+			<artifactId>configurate-hocon</artifactId>
+			<version>3.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ninja.leaping.configurate</groupId>
+			<artifactId>configurate-gson</artifactId>
+			<version>3.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ninja.leaping.configurate</groupId>
+			<artifactId>configurate-parent</artifactId>
+			<version>3.3</version>
+			<type>pom</type>
 		</dependency>
 
 	</dependencies>
